syntax="proto3";

package serialization;
option go_package = "./;serialization";

// Keystore holds a list of keys.
// We use protobuf to serialize the whole keystore before encryption.
message Keystore {
  repeated Key keys = 1;
}

message Key {
  string name = 1;
  bytes private_key = 2;
  int64 created_at = 3;
  string key_type = 4;
  bytes metadata = 5;
}

// ECDH encryption envelope for hybrid encryption
message EcdhEnvelope {
  uint32 version = 1;
  string algorithm = 2;
  bytes ephemeral_public_key = 3;
  bytes salt = 4;
  bytes nonce = 5;
  bytes ciphertext = 6;
}